--- a/package.json
+++ b/package.json
@@ -6,12 +6,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-client-preset": "^1.0.8",
+    "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
+    "js-cookie": "^2.2.1",
+    "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-player": "^2.0.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "react-skylight": "^0.5.1",
+    "react-sortable-tree": "^2.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
