--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-client-preset": "^1.0.8",
     "apollo-link-context": "^1.0.20",
     "apollo-upload-client": "^13.0.0",
+    "array-move": "^2.2.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "graphql": "^15.0.0",
@@ -19,11 +20,10 @@
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^11.0.1",
     "react-player": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-skylight": "^0.5.1",
+    "react-sortable-hoc": "^1.11.0",
     "react-sortable-tree": "^2.7.1"
   },
   "scripts": {
