--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.0.0",
     "react-player": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -27,7 +28,7 @@
     "react-sortable-tree": "^2.7.1"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start",
+    "start": "GENERATE_SOURCEMAP=false BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
