--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "apollo-upload-client": "^13.0.0",
     "array-move": "^2.2.1",
     "bootstrap": "^4.4.1",
-    "font-awesome": "^4.7.0",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "js-cookie": "^2.2.1",
@@ -24,8 +23,7 @@
     "react-player": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-sortable-hoc": "^1.11.0",
-    "react-sortable-tree": "^2.7.1"
+    "react-sortable-hoc": "^1.11.0"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false BROWSER=none react-scripts start",
