--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react-player": "^2.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-snap": "^1.23.0",
     "react-sortable-hoc": "^1.11.0"
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "reactSnap": {
+    "inlineCss": true
   }
+
 }
